[gd_scene load_steps=13 format=1]

[ext_resource path="res://R_and_D/paper_prtotype/img/level_01.png" type="Texture" id=1]
[ext_resource path="res://R_and_D/mvp/actor.tscn" type="PackedScene" id=2]
[ext_resource path="res://R_and_D/mvp/player.gd" type="Script" id=3]
[ext_resource path="res://R_and_D/mvp/landlord.gd" type="Script" id=4]
[ext_resource path="res://R_and_D/paper_prtotype/img/landlord.png" type="Texture" id=5]
[ext_resource path="res://R_and_D/mvp/landlord/landlord_first_incounter__dialog.gd" type="Script" id=6]
[ext_resource path="res://R_and_D/paper_prtotype/sound/dialog/A!_full.ogg" type="AudioStream" id=7]
[ext_resource path="res://conversation_system.gd" type="Script" id=8]
[ext_resource path="res://R_and_D/paper_prtotype/fonts/Rubik-Black.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://R_and_D/mvp/img/mask_for_conversation.png" type="Texture" id=10]
[ext_resource path="res://R_and_D/paper_prtotype/utils/time_and_level.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]

font/size = 25
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 9 )

[node name="mvp_test_level" type="Node"]

[node name="map" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = { "_edit_lock_":true }

[node name="level_01" type="Sprite" parent="map"]

transform/scale = Vector2( 0.614485, 0.614485 )
texture = ExtResource( 1 )
centered = false
modulate = Color( 0.773598, 0.855469, 0.761902, 1 )
__meta__ = { "_edit_lock_":true }

[node name="mouse_click_area" type="TextureButton" parent="map"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 576.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
__meta__ = { "_edit_lock_":true }

[node name="YSort" type="YSort" parent="."]

sort/enabled = true
__meta__ = { "_edit_lock_":true }

[node name="player" parent="YSort" instance=ExtResource( 2 )]

editor/display_folded = true
script/script = ExtResource( 3 )

[node name="collison" parent="YSort/player/interaction_field"]

visibility/visible = false

[node name="conversation_color" parent="YSort/player"]

modulate = Color( 0.547836, 0.871094, 0.696838, 1 )

[node name="landlord" parent="YSort" instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( 577.153, 325.338 )
script/script = ExtResource( 4 )

[node name="sprite" parent="YSort/landlord"]

texture = ExtResource( 5 )

[node name="collision" parent="YSort/landlord"]

polygon = Vector2Array( -47.8627, 32.5702, 8.30841, -0.56665, 60.0342, 31.3579, 9.81158, 65.8832 )

[node name="interaction_field" parent="YSort/landlord"]

visibility/visible = false

[node name="landlord_first_incounter__dialog" type="Node" parent="YSort/landlord/conversations"]

script/script = ExtResource( 6 )

[node name="audio" type="StreamPlayer" parent="YSort/landlord/conversations/landlord_first_incounter__dialog"]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = false
stream/volume_db = 20.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="conversation_color" parent="YSort/landlord"]

modulate = Color( 0, 0.765625, 1, 1 )

[node name="conversation_system" type="Node" parent="."]

editor/display_folded = true
script/script = ExtResource( 8 )

[node name="consol" type="TextEdit" parent="conversation_system"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 192.0
margin/top = 480.0
margin/right = 832.0
margin/bottom = 576.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.714844, 0.268066, 0.268066, 1 )
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65
__meta__ = { "_edit_lock_":true }

[node name="next" type="Button" parent="conversation_system/consol"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 672.0
margin/top = 0.0
margin/right = 736.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "next"
flat = false

[node name="previus" type="Button" parent="conversation_system/consol"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -96.0
margin/top = 0.0
margin/right = -32.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "previus"
flat = false

[node name="actor_1" type="Sprite" parent="conversation_system/consol"]

editor/display_folded = true
visibility/visible = false
visibility/light_mask = 2
transform/pos = Vector2( 34, -13 )
z/relative = false
texture = ExtResource( 5 )
__meta__ = { "_edit_group_":true }

[node name="Light2D" type="Light2D" parent="conversation_system/consol/actor_1"]

visibility/light_mask = 2
transform/pos = Vector2( -9.48086, -24.3191 )
transform/rot = -90.3715
transform/scale = Vector2( 0.359487, 0.359488 )
enabled = true
editor_only = false
texture = ExtResource( 10 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 3
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 2
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 2

[node name="black_background" type="Sprite" parent="conversation_system/consol/actor_1"]

visibility/behind_parent = true
transform/pos = Vector2( -11.0779, -9.92036 )
transform/scale = Vector2( 0.4079, 0.4079 )
texture = ExtResource( 10 )
modulate = Color( 0, 0, 0, 1 )

[node name="actor_2" type="Sprite" parent="conversation_system/consol"]

editor/display_folded = true
visibility/visible = false
visibility/light_mask = 2
transform/pos = Vector2( 614, -13 )
z/relative = false
texture = ExtResource( 5 )
__meta__ = { "_edit_group_":true }

[node name="Light2D" type="Light2D" parent="conversation_system/consol/actor_2"]

visibility/light_mask = 2
transform/pos = Vector2( -9.48086, -24.3191 )
transform/rot = -90.3715
transform/scale = Vector2( 0.359487, 0.359488 )
enabled = true
editor_only = false
texture = ExtResource( 10 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 3
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 2
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 2

[node name="black_background" type="Sprite" parent="conversation_system/consol/actor_2"]

visibility/behind_parent = true
transform/pos = Vector2( -17.0779, -9.92036 )
transform/scale = Vector2( 0.4079, 0.4079 )
texture = ExtResource( 10 )
modulate = Color( 0, 0, 0, 1 )

[node name="wait_for_next_step" type="Timer" parent="conversation_system"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="audio_stop_timer" type="Timer" parent="conversation_system"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="time_and_level" parent="." instance=ExtResource( 11 )]

transform/pos = Vector2( 1075.45, 250.844 )

[connection signal="button_down" from="map/mouse_click_area" to="YSort/player" method="_on_mouse_click_area_button_down"]

[connection signal="timeout" from="conversation_system/audio_stop_timer" to="conversation_system" method="_on_audio_stop_timer_timeout"]


[editable path="YSort/player"]
[editable path="YSort/landlord"]
